Project automotive_marketplace {
  database_type: 'PostgreSQL'
  Note: 'Automotive Marketplace relational database schema'
}

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  full_name varchar(150) [not null]
  email varchar(255) [not null, unique]
  password_hash text [not null]
  role varchar(30) [not null, default: 'buyer']
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    email [name: 'idx_users_email']
    role [name: 'idx_users_role']
  }

  Note: 'Marketplace users. Roles: buyer, seller, admin.'
}

Table categories {
  id uuid [pk, default: `gen_random_uuid()`]
  parent_id uuid
  name varchar(100) [not null]
  slug varchar(120) [not null, unique]
  description text
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    parent_id [name: 'idx_categories_parent_id']
    is_active [name: 'idx_categories_is_active']
  }

  Note: 'Hierarchical category tree using adjacency-list pattern.'
}

Table listings {
  id uuid [pk, default: `gen_random_uuid()`]
  seller_id uuid
  category_id uuid [not null]
  make varchar(100) [not null]
  model varchar(100) [not null]
  year smallint [not null]
  mileage integer [not null, default: 0]
  price numeric(14,2) [not null]
  condition varchar(30) [not null]
  transmission varchar(30) [not null]
  fuel_type varchar(30) [not null]
  color varchar(50) [not null]
  location varchar(150) [not null]
  description text
  status varchar(20) [not null, default: 'available']
  search_vector tsvector [note: 'Generated STORED column for PostgreSQL full-text search']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    seller_id [name: 'idx_listings_seller_id']
    category_id [name: 'idx_listings_category_id']
    status [name: 'idx_listings_status']
    (created_at, id) [name: 'idx_listings_created_at']
    (category_id, status, created_at, id) [name: 'idx_listings_category_status_created_at']
    search_vector [type: gin, name: 'idx_listings_search_vector']
  }

  Note: 'Vehicle listings. Status: available, pending, sold, removed.'
}

Table listing_images {
  id uuid [pk, default: `gen_random_uuid()`]
  listing_id uuid [not null]
  image_url text [not null]
  sort_order integer [not null, default: 0]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    listing_id [name: 'idx_listing_images_listing_id']
    (listing_id, sort_order) [name: 'idx_listing_images_listing_sort']
  }
}

Table filter_attributes {
  id uuid [pk, default: `gen_random_uuid()`]
  category_id uuid [not null]
  name varchar(100) [not null]
  slug varchar(120) [not null]
  type varchar(20) [not null]
  is_filterable boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    category_id [name: 'idx_filter_attributes_category_id']
    (category_id, is_filterable) [name: 'idx_filter_attributes_filterable']
    (category_id, slug) [unique, name: 'unique_filter_attribute_category_slug']
  }

  Note: 'Dynamic category-specific filter definitions. Types: enum, range, boolean.'
}

Table filter_attribute_options {
  id uuid [pk, default: `gen_random_uuid()`]
  attribute_id uuid [not null]
  value varchar(100) [not null]
  label varchar(100) [not null]
  sort_order integer [not null, default: 0]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    attribute_id [name: 'idx_filter_attribute_options_attribute_id']
    (attribute_id, value) [unique, name: 'unique_filter_attribute_option_value']
  }
}

Table listing_attribute_values {
  id uuid [pk, default: `gen_random_uuid()`]
  listing_id uuid [not null]
  attribute_id uuid [not null]
  option_id uuid
  value_text text
  value_number numeric(14,4)
  value_boolean boolean
  created_at timestamptz [not null, default: `now()`]

  indexes {
    listing_id [name: 'idx_listing_attribute_values_listing_id']
    attribute_id [name: 'idx_listing_attribute_values_attribute_id']
    option_id [name: 'idx_listing_attribute_values_option_id']
    (attribute_id, value_number) [name: 'idx_listing_attribute_values_number']
    (attribute_id, value_boolean) [name: 'idx_listing_attribute_values_boolean']
    (listing_id, attribute_id) [unique, name: 'unique_listing_attribute_value']
  }

  Note: 'Stores dynamic filter values without requiring schema changes for new filters.'
}


// Relationships

Ref: categories.parent_id > categories.id [delete: restrict]

Ref: listings.seller_id > users.id [delete: restrict]

Ref: listings.category_id > categories.id [delete: restrict]

Ref: listing_images.listing_id > listings.id [delete: cascade]

Ref: filter_attributes.category_id > categories.id [delete: cascade]

Ref: filter_attribute_options.attribute_id > filter_attributes.id [delete: cascade]

Ref: listing_attribute_values.listing_id > listings.id [delete: cascade]

Ref: listing_attribute_values.attribute_id > filter_attributes.id [delete: cascade]

Ref: listing_attribute_values.option_id > filter_attribute_options.id [delete: cascade]